vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_record_element_resolution_function_many.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication,\n\"(elem1 (resolve1), elem2 resolve2, elem3 (sub_elem sub_resolve)) rec_t\")"
---
SubtypeIndication
  ParenthesizedElementResolution
    LeftPar
    ElementResolutionResolutionIndication
      RecordResolutionElementResolution
        RecordResolution
          RecordElementResolution
            Identifier 'elem1'
            ParenthesizedElementResolution
              LeftPar
              ElementResolutionResolutionIndication
                ResolutionIndicationElementResolution
                  NameResolutionIndication
                    Name
                      NameDesignatorPrefix
                        Identifier 'resolve1'
              RightPar
          Comma
          RecordElementResolution
            Identifier 'elem2'
            NameResolutionIndication
              Name
                NameDesignatorPrefix
                  Identifier 'resolve2'
          Comma
          RecordElementResolution
            Identifier 'elem3'
            ParenthesizedElementResolution
              LeftPar
              ElementResolutionResolutionIndication
                RecordResolutionElementResolution
                  RecordResolution
                    RecordElementResolution
                      Identifier 'sub_elem'
                      NameResolutionIndication
                        Name
                          NameDesignatorPrefix
                            Identifier 'sub_resolve'
              RightPar
    RightPar
  Name
    NameDesignatorPrefix
      Identifier 'rec_t'
