vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_resolution_function.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"resolve std_logic\")"
---
SubtypeIndication
  NameResolutionIndication
    Name
      Identifier 'resolve'
  Name
    Identifier 'std_logic'
