vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_resolution_function_selected_name.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"lib.foo.resolve std_logic\")"
---
SubtypeIndication
  NameResolutionIndication
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'resolve'
  Name
    NameDesignatorPrefix
      Identifier 'std_logic'
