vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_without_constraint.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"std_logic\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'std_logic'
