vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__subtype_indication_with_subtype_attribute.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"obj'subtype\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'obj'
    AttributeName
      Tick
      Keyword(Subtype)
